<resources>
    
    <string name="app_name">ChamadaApplication</string>

    <!-- Layout disciplina list view -->
    <string name="disciplina_nome"><b>Nome: </b></string>
    <string name="disciplina_inicio"><b>Inicio: </b></string>
    <string name="disciplina_termino"><b>Termino: </b></string>
    
    <string name="cadastrarDisciplina">Cadastrar Disciplina</string>
    <string name="cadastrarDias">Cadastrar Dias</string>
    <string name="data_inicio"><b>Data de inicio:</b></string>
    <string name="data_fim"><b>Data de fim:</b></string>
    <string name="data_nao_definida">definir</string>
    <string name="dias_semana"><b>Dias da semana:</b></string>
    
    <string name="menu">Menu</string>    
    
    <string name="hora_inicio">Hora inicio:</string>
    <string name="hora_fim">Hora fim:</string>    
    <string name="hora_default">00:00</string>
    
    <string name="addDisciplinaIcon">Cadastrar nova disciplina</string>

</resources>
