<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/disciplinaNomeEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/disciplina_nome" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10sp"
        android:background="@android:color/darker_gray" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="10sp" >
           
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_inicio"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/dataInicioNaoDefinida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_nao_definida"
                android:textSize="23sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="5sp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_fim"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/dataFimNaoDefinida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_nao_definida"
                android:textSize="23sp" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10sp"
        android:background="@android:color/darker_gray" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="5sp"
        android:text="@string/dias_semana"
        android:textSize="23sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/diasSemanaCheckBoxesList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="10sp" />
    </RelativeLayout>

</LinearLayout>